--- a/rtf_theme/static/css/r4.css
+++ b/rtf_theme/static/css/r4.css
@@ -1,78 +1,94 @@
 .masthead {
-    background-image: url(../img/masthead.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 0 0 50px 0;
-    width: 100%;
+  background-image: url(../img/masthead.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 0 50px 0;
+  width: 100%;
 }
 
 #fourth-quote {
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #ffffff;
-    min-height: 200px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  min-height: 200px;
 }
 
 #fourth-quote h2 {
-    margin-top: 38px;
-    font-family:  "Times New Roman", Times, serif;
-    font-weight: 400;
-    font-size: 26px;
-    text-shadow: 2px 2px 2px #000;
+  margin-top: 38px;
+  font-family:  "Times New Roman", Times, serif;
+  font-weight: 400;
+  font-size: 26px;
+  text-shadow: 2px 2px 2px #000;
 }
 
 #fourth-quote h3 {
-    font-family: "Times New Roman", Times, serif;
-    font-size: 30px;
-    font-weight: 300;
-    text-shadow: 2px 2px 2px #000;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 30px;
+  font-weight: 300;
+  text-shadow: 2px 2px 2px #000;
 }
 
 #fourth-quote h1 {
-  font-size: 32.5px;
-  text-shadow: 2px 2px 2px #000;
-  color: #FDFDFD;
-  margin-top: 37px;
+font-size: 32.5px;
+text-shadow: 2px 2px 2px #000;
+color: #FDFDFD;
+margin-top: 37px;
 }
 
 #home-logo {
-    background-color: rgba(235, 235, 235, 0.1);
-    margin: 40px 0 0 0;
-    padding: 20px 0 30px 0;
+  background-color: rgba(235, 235, 235, 0.1);
+  margin: 40px 0 0 0;
+  padding: 20px 0 30px 0;
 }
 
 #home-logo p {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #ffffff;
-    font-size: 18px;
-    margin-bottom: 7px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #ffffff;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 #home-logo .social img {
-    padding: 0px 5px 10px 5px;
-    max-height: 25px;
-    width: auto;
-    box-shadow: none;
+  padding: 0px 5px 10px 5px;
+  max-height: 25px;
+  width: auto;
+  box-shadow: none;
 }
 
 #home-logo .logo {
-    margin-top: 20px;
-    box-shadow: none;
-    width: 100%;
+  box-shadow: none;
+  width: 100%;
+}
+
+#home-logo hr {
+color: #ccc;
+background-color: #ccc;
+border: 0;
+height: 1px;
+width: 85%;
+margin: 20px auto;
+}
+
+#home-logo .volunteer {
+  margin-bottom: -5px;
 }
 
 #home-right {
-    margin-top: 40px;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 15px;
-    color: rgb(255, 255, 255);
-    text-align: left;
-    min-height: 485px;
+  margin-top: 40px;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 15px;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  min-height: 485px;
 
 }
 
 #home-right h2 {
-    font-weight: 500;
-    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+  font-weight: 500;
+  text-shadow: 2px 2px 2px rgb(0, 0, 0);
+}
+
+.inverse {
+  color: #333;
 }
 
 #volunteer-form {
@@ -84,29 +100,29 @@
 }
 
 .featured {
-    text-align: center;
+  text-align: center;
 }
 
 .navbar-inverse .nav .active a,
 .navbar-inverse .nav .active a:hover  {
-    background-color: #2B446F;
+  background-color: #2B446F;
 }
 
 .navbar-inverse .extra img,
 .navbar-inverse .extra .pull-left {
-    margin: 8px 3px 0 0 !important;
+  margin: 8px 3px 0 0 !important;
 }
 .navbar-inverse .extra .pull-left .flag1 {
-    color: #ed2200;
+  color: #ed2200;
 }
 .navbar-inverse .extra .pull-left .flag2 {
-    color: #fff;
+  color: #fff;
 }
 .navbar-inverse .extra .pull-left .flag3 {
-    color: #0083b8;
+  color: #0083b8;
 }
 .navbar-inverse .extra {
-    padding: 5px 25px;
+  padding: 5px 25px;
 }
 
 #map img {
@@ -312,30 +328,30 @@ html,
 
 /* SINA EDIT */
 
-div.protestpage #fourth-quote h1 {
+.protestpage #fourth-quote h1 {
   font-size: 29px;
   font-weight:300;
 }
 
 
 
-div.protestpage #fourth-quote h3 {
+.protestpage #fourth-quote h3 {
   font-family: inherit;
   font-size: 27px;
   font-weight:200;
 }
 
 
-div.protestpage #home-logo {
+.protestpage #home-logo {
   background: none;
   margin-top:80px;
 }
 
-div.eventinfo {
-  padding-top:25px;
+.eventinfo {
+  padding-top: 100px;
 }
 
-div.eventinfo div.span3 {
+.eventinfo .span3 {
   text-align:right;
   font-size: 30px;
   font-weight: 400;
@@ -345,7 +361,7 @@ div.eventinfo div.span3 {
   min-height:60px;
 }
 
-div.eventinfo div.span5 {
+.eventinfo .span5 {
   font-size: 26px;
   color: #fff;
   text-align:left;
@@ -354,42 +370,45 @@ div.eventinfo div.span5 {
   padding-top:8px;
   padding-bottom:10px;
   font-weight:300;
-
 }
 
-div.eventinfo div.social-links img, div.eventinfo div.social img  {
+.eventinfo .span5 a {
+  color: white;
+}
+
+.eventinfo .social-links img, .eventinfo .social img  {
   box-shadow: none;
 }
 
-div.eventinfo div.social-links img {
+.eventinfo .social-links img {
   padding: 10px 0;
 }
 
-div.eventinfo div.social-links .span3 {
+.eventinfo .social-links .span3 {
   padding-top:23px;
 }
 
-div.protestpage .moredetails {
+.protestpage .moredetails {
     margin-top:30px;
 }
 
-div.protestpage .moredetails h3 {
+.protestpage .moredetails h3 {
   font-weight:300;
   font-size:30px;
   text-align:right;
 }
 
-div.protestpage .moredetails .span8 {
+.protestpage .moredetails .span8 {
   margin-top:16px;
 }
 
 @media (max-width: 767px) {
-  div.eventinfo div.span3 {
+  .eventinfo .span3 {
     text-align:left;
     min-height:0;
     line-height:120%;
   }
-  div.eventinfo div.row {
+  .eventinfo .row {
     padding: 4px 30px;
   }
 
@@ -397,14 +416,14 @@ div.protestpage .moredetails .span8 {
     max-width:400px;
   }
 
-  div.eventinfo div.social-links .span3 {
+  .eventinfo .social-links .span3 {
     padding-top:4px;
   }
 
-  div.protestpage #home-logo {
+  .protestpage #home-logo {
     margin-top:30px;
   }
-  div.eventinfo#home-right {margin-top:0; padding-top:10px;}
+  .eventinfo#home-right {margin-top:0; padding-top:10px;}
 }
 
 
