--- a/rtf_theme/templates/home.html
+++ b/rtf_theme/templates/home.html
@@ -1,75 +1,12 @@
-{% extends "base.html" %}
-{% load mezzanine_tags keyword_tags blog_tags keyword_tags disqus_tags %}
+{% extends "fancy.html" %}
+{% load blog_tags %}
 
-{% block meta_title %}{{ page.meta_title }}{% endblock %}
-
-{% block meta_keywords %}{% metablock %}
-{% keywords_for page as keywords %}
-{% for keyword in keywords %}
-    {% if not forloop.first %}, {% endif %}
-    {{ keyword }}
-{% endfor %}
-{% endmetablock %}{% endblock %}
-
-{% block meta_description %}{% metablock %}
-{{ page.description }}
-{% endmetablock %}{% endblock %}
-{% block message_container %}{% endblock %}
-{% block stage %}
-<div class="masthead">
-  <div id="fourth-quote">
-    <div class="container">
-      <div class="row">
-        <div class="span12 featured">
-          <h1>WE’RE WORKING TO RESTORE THE FOURTH AMENDMENT:</h1>
-          <h3>“The right of the people to be secure in their persons,
-            houses, papers, and effects, against unreasonable searches and
-            seizures, shall not be violated...”</h3>
-        </div>
-      </div>
-    </div>
-  </div> <!-- /fourth-quote -->
-
-  <div class="container">
-
-    <div class="row">
-
-      <div class="span4 featured" id="home-logo">
-        <img class="logo" src="{{STATIC_URL}}img/rtf_logo.png" alt="restore the fourth logo">
-        <p>Help spread the word:</p>
-        <a class="social" href="mailto:?subject=The U.S. government is spying on you. Let's do something about it.&amp;body=Nationwide Protests to Restore the Fourth%0A%0AOn June 6th, The Guardian and The Washington Post published NSA-contractor Edward Snowden's leaks revealing the existence of PRISM, a clandestine electronic surveillance program that allows the NSA to directly access e-mail, web searches, and other Internet traffic. This program is in blatant violation of the Fourth Amendment of the U.S. Constitution, protecting us against 'unreasonable searches and seizures' and those without a warrant or probable cause.%0A%0AConcerned? You can do something. In July, thousands of people in over 50 cities across the United States will protest the unconstitutional surveillance methods employed by the U.S. government, educating other citizens on the issue and preparing an apparatus for further action.%0A%0AYou can learn more and find and sign up for your local protest at http://www.restorethefourth.net." target="_blank"><img src="{{STATIC_URL}}img/social/email.png" /></a>
-        <a class="social" id="tweet-box" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Frestorethefourth.net&text=This%20July%204th%20protests%20are%20planned%20across%20the%20country%20against%20surveillance%20%26%20to%20%40restorethefourth.%20Will%20you%20be%20there%3F&related=Restore_the4th%2Csinak" target="_blank"><img src="{{STATIC_URL}}img/social/twitter.png"/></a>
-        <br />
-        <a class="social" id="facebook" href="https://www.facebook.com/sharer/sharer.php?u=hhttp%3A%2F%2Frestorethefourth.net" target="_blank"><img src="{{STATIC_URL}}img/social/facebook.png" /></a>
-        <script type="text/javascript">
-            function openFacebook(){var e="https://www.facebook.com/sharer/sharer.php?u=hhttp%3A%2F%2Frestorethefourth.net";window.open(e,"Share on Facebook","width=626,height=436");return false}function openTwitter(){var e="https://twitter.com/intent/tweet?url=http%3A%2F%2Frestorethefourth.net&text=This%20July%204th%20protests%20are%20planned%20across%20the%20country%20against%20surveillance%20%26%20to%20%40restorethefourth.%20Will%20you%20be%20there%3F&related=Restore_the4th%2Csinak";window.open(e,"Twitter","width=550,height=420");return false}$(document).ready(function(){$("#facebook").attr("onclick","openFacebook(); return false;");$("#tweet-box").attr("onclick","openTwitter(); return false;")})
-        </script>
-        <div id="mc_embed_signup">
-            <p>Sign up for our newsletter</p>
-            <form action="http://restorethefourth.us7.list-manage2.com/subscribe/post?u=78ef7834b585d79e03ecda09a&amp;id=4ecea1236d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
-            </form>
-        </div>
-        <div class="volunteer">
-          <a href="/volunteer" class="btn btn-default">Sign up to volunteer today!</a>
-        </div>
-      </div> <!-- /home-logo (used for logo+social+signup links on left) -->
-
-      <div class="span7 offset1" id="home-right">
-          {% blog_recent_posts 1 as recent_posts %}
-          {% for blog_post in recent_posts %}
-              </h3><i>{{blog_post.publish_date}}</i></h3>
-              <h2>{{blog_post.title}}</h2>
-              {{blog_post.description|safe}}
-              <a href="{{ blog_post.get_absolute_url }}">Read more</a>
-          {% endfor %}
-      </div> <!-- /home-right (used for featured homepage content on right) -->
-
-    </div> <!-- /row -->
-  </div> <!-- /container -->
-</div> <!-- /masthead -->
-
-{% endblock %}
-
-{% block footer %}
+{% block inner_content %}
+  {% blog_recent_posts 1 as recent_posts %}
+  {% for blog_post in recent_posts %}
+    <i>{{blog_post.publish_date}}</i>
+    <h2>{{blog_post.title}}</h2>
+    {{blog_post.description|safe}}
+    <a href="{{ blog_post.get_absolute_url }}">Read more</a>
+  {% endfor %}
 {% endblock %}
